# Brain_Tumour_Temperature

./: .gitignore  CLAUDE.md  README.md  all_code.txt  all_terminals.yaml  binary_smooth_sphere.vti  blender_import.txt  config.yaml  create_surface_friendly_vtk.py  create_working_vtk.py  debug_vtk_structure.py  deep_vtk_debug.py  extract_terminals.py  main.py  our_method.vti  paraview_instructions.py  pyproject.toml  reference_working.vti  requirements.txt  surface_friendly_sphere.vti  surface_seed_points_inward.csv  test_coordinate_transform.py  test_fixed_vtk.py  test_sphere.vti  test_volume_simple.vti  test_vtk_files.py  test_vtk_generation.py  vessels_branches.json
controlled_test_vtk/tissue_vtk/: GM_iter_0.vti  perfused_iter_0.vti
data/: Centerline curve (0).mrk.json  Centerline model.vtk  Centerline quantification.tsv  Endpoints_1.mrk.json  check_midas.ipynb  extract_mida_masks.py
gemini_pro_vasculature.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: all_python_code.txt  config_manager.py  constants.py  energy_model.py  io_utils.py  perfusion_solver.py  utils.py  vascular_growth.py  visualization.py
src/gemini_pro_vasculature.egg-info/: PKG-INFO
temp_test_larger_growth_output/run_larger_gbo/: gbo_graph_iter_3.vtp  gbo_graph_iter_6.vtp  gbo_graph_iter_7.vtp
temp_test_vascular_growth_output/run_simple_gbo/: gbo_graph_iter_1.vtp  gbo_graph_iter_2.vtp  gbo_graph_iter_3.vtp  gbo_graph_iter_4.vtp
test_vtk_output/tissue_vtk/: perfused_iter_999.vti
tests/: test_config_manager.py  test_energy_model.py  test_io_utils.py  test_perfusion_solver.py  test_vascular_growth.py
transform_test/no_transform/tissue_vtk/: GM_iter_1.vti
transform_test/with_transform/tissue_vtk/: GM_iter_1.vti
