# Save this as pyproject.toml
[project]
name = "gemini_pro_vasculature"
version = "0.1.0"
description = "Simulation framework for vascular growth and tumour angiogenesis."
authors = [{name = "Christian Behler"}]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
